compile-tests/pixels_mut.stderr
error[E0502]: cannot borrow `img` as immutable because it is also borrowed as mutable
 --> compile-tests/pixels_mut.rs:6:38
  |
5 |     let mut pixels_mut = img.pixels_mut();
  |                          ---------------- mutable borrow occurs here
6 |     let (_view_mut_a, _view_mut_b) = img.split_x_at(0).unwrap();
  |                                      ^^^^^^^^^^^^^^^^^ immutable borrow occurs here
7 |
8 |     let _ = pixels_mut.next();
  |             ----------------- mutable borrow later used here
